@@ -1492,10 +1492,13 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
   error = Database_getUInt(databaseHandle,
                            &n,
                            "fileEntries \
+                              LEFT JOIN entries ON entries.id=fileEntries.entryId \
                               LEFT JOIN entryFragments ON entryFragments.entryId=fileEntries.entryId \
                            ",
                            "COUNT(fileEntries.id)",
-                           "entryFragments.id IS NULL",
+                           "    entries.deletedFlag=FALSE \
+                            AND entryFragments.id IS NULL \
+                           ",
                            DATABASE_FILTERS
                            (
                            ),
@@ -1515,10 +1518,13 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
   error = Database_getUInt(databaseHandle,
                            &n,
                            "imageEntries \
+                              LEFT JOIN entries ON entries.id=imageEntries.entryId \
                               LEFT JOIN entryFragments ON entryFragments.entryId=imageEntries.entryId \
                            ",
                            "COUNT(imageEntries.id)",
-                           "entryFragments.id IS NULL",
+                           "    entries.deletedFlag=FALSE \
+                            AND entryFragments.id IS NULL \
+                           ",
                            DATABASE_FILTERS
                            (
                            ),
@@ -1538,10 +1544,13 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
   error = Database_getUInt(databaseHandle,
                            &n,
                            "hardlinkEntries \
+                              LEFT JOIN entries ON entries.id=hardlinkEntries.entryId \
                               LEFT JOIN entryFragments ON entryFragments.entryId=hardlinkEntries.entryId \
                            ",
                            "COUNT(hardlinkEntries.id)",
-                           "entryFragments.id IS NULL",
+                           "    entries.deletedFlag=FALSE \
+                            AND entryFragments.id IS NULL \
+                           ",
                            DATABASE_FILTERS
                            (
                            ),
@@ -1567,6 +1576,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND fileEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -1593,6 +1603,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND imageEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -1619,6 +1630,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND directoryEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -1645,6 +1657,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND linkEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -1671,6 +1684,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND hardlinkEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -1697,6 +1711,7 @@ LOCAL ulong checkOrphanedEntries(DatabaseHandle *databaseHandle)
                            ",
                            "COUNT(entries.id)",
                            "    entries.type=? \
+                            AND entries.deletedFlag=FALSE \
                             AND specialEntries.id IS NULL \
                            ",
                            DATABASE_FILTERS
@@ -6412,10 +6427,13 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
     (void)Database_getIds(databaseHandle,
                           &ids,
                           "fileEntries \
+                             LEFT JOIN entries ON entries.id=fileEntries.entryId \
                              LEFT JOIN entryFragments ON entryFragments.entryId=fileEntries.entryId \
                           ",
                           "fileEntries.id",
-                          "entryFragments.id IS NULL",
+                          "    entries.deletedFlag=FALSE \
+                           AND entryFragments.id IS NULL \
+                          ",
                           DATABASE_FILTERS
                           (
                           ),
@@ -6442,10 +6460,13 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
     (void)Database_getIds(databaseHandle,
                           &ids,
                           "imageEntries \
+                             LEFT JOIN entries ON entries.id=fileEntries.entryId \
                              LEFT JOIN entryFragments ON entryFragments.entryId=imageEntries.entryId \
                           ",
                           "imageEntries.id",
-                          "entryFragments.id IS NULL",
+                          "    entries.deletedFlag=FALSE \
+                           AND entryFragments.id IS NULL \
+                          ",
                           DATABASE_FILTERS
                           (
                           ),
@@ -6472,10 +6493,13 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
     (void)Database_getIds(databaseHandle,
                           &ids,
                           "hardlinkEntries \
+                             LEFT JOIN entries ON entries.id=fileEntries.entryId \
                              LEFT JOIN entryFragments ON entryFragments.entryId=hardlinkEntries.entryId \
                           ",
                           "hardlinkEntries.id",
-                          "entryFragments.id IS NULL",
+                          "    entries.deletedFlag=FALSE \
+                           AND entryFragments.id IS NULL \
+                          ",
                           DATABASE_FILTERS
                           (
                           ),
@@ -6504,6 +6528,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND fileEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
@@ -6547,6 +6572,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND imageEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
@@ -6590,6 +6616,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND directoryEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
@@ -6633,6 +6660,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND linkEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
@@ -6676,6 +6704,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND hardlinkEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
@@ -6719,6 +6748,7 @@ LOCAL Errors cleanOrphanedEntries(DatabaseHandle *databaseHandle)
                           ",
                           "entries.id",
                           "    entries.type=? \
+                           AND entries.deletedFlag=FALSE \
                            AND specialEntries.id IS NULL \
                           ",
                           DATABASE_FILTERS
